forth/test/fail/test_local_assignment_numeric.af
\ Must fail to compile.
fun: .test_local_assignment_numeric { val -- err }
  val { 1tmp }
end
